# Python-ray-tracer

./: .gitignore  LICENSE  Makefile  README.md  main.py  pyproject.toml  vectors.py
examples/: cornel_box.py  csg_test.py  infinity_reflections.py  mirror_plane.py  temple.py  transform_test.py  unicode_output.py
src/: engine.py
src/image_processing/: filters.py  image_converter_base.py  image_converters.py  image_data.py
src/math/: utilities.py  vectors.py
src/math_tools/: utilities.py  vectors.py
src/renderer/: camera_base.py  cameras.py  optic.py  ray_model.py  renderer.py
src/scene_components/: scene.py
src/scene_components/bodies/: body.py  material.py
src/scene_components/bodies/shapes/: csg.py  csg_shape_base.py  point.py  segments_operations.py  shape_base.py  shapes.py
src/scene_components/lights/: light_source_base.py  light_sources.py  lighting.py
