[tool.poetry]
name = "python-ray-tracer"
version = "0.1.0"
description = "Python 3d rendering engine with ray traycing support"
authors = ["Smoking_Elk <andre12go@mail.ru>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pillow = "^10.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
